--- a/index.html
+++ b/index.html
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-  <title>Puzzle Slide</title>
-  <style>
-    #puzzle-container {
-      width: 80%;
-      height: 80vh;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 5px;
-      margin: 0 auto;
-    }
-
-    .puzzle-block {
-      background: #66cdaa;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2em;
-    }
-
-    #timer {
-      font-size: 1.5em;
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Particles Demo</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>たのしいよね？</h1>
-  <p id="timer">Time: 0 seconds</p>
-  <div id="puzzle-container"></div>
+    <div id="particles-js"></div>
 
-  <script src="app.js"></script>
-  
+    <!-- stats.jsのための要素 -->
+    <div class="count-particles">
+      <span class="js-count-particles">@</span>author haku
+    </div>
+
+    <!-- 必要なスクリプトのリンク -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="particles.js"></script>
+    <script src="JS_Trainings\stats.js-master\src"></script>
+    <script src="script.js"></script>
 </body>
 </html>
