--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Particles Demo</title>
+    <title>HAKU</title>
+    <link rel="icon" type="image/x-icon" href="haku.png" />
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
